force-app/main/default/objects/IFLog__c/IFLog__c.object-meta.xml
<CustomObject>
    <label>IFLog</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{00000000}</displayFormat>
        <label>IFLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>