force-app/main/default/objects/IFLog__c/fields/BatchCronId__c.field-meta.xml
<CustomField>
    <fullName>BatchCronId__c</fullName>
    <label>BatchCronId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>