force-app/main/default/objects/IFLog__c/fields/BatchEndTime__c.field-meta.xml
<CustomField>
    <fullName>BatchEndTime__c</fullName>
    <label>BatchEndTime</label>
    <type>DateTime</type>
</CustomField>