force-app/main/default/objects/IFLog__c/fields/BatchJobItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>BatchJobItemsProcessed__c</fullName>
    <label>BatchJobItemsProcessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>