force-app/main/default/objects/IFLog__c/fields/BatchParameter__c.field-meta.xml
<CustomField>
    <fullName>BatchParameter__c</fullName>
    <label>BatchParameter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>