force-app/main/default/objects/IFLog__c/fields/BatchStartTime__c.field-meta.xml
<CustomField>
    <fullName>BatchStartTime__c</fullName>
    <label>BatchStartTime</label>
    <type>DateTime</type>
</CustomField>