force-app/main/default/objects/IFLog__c/fields/BatchTotalJobItems__c.field-meta.xml
<CustomField>
    <fullName>BatchTotalJobItems__c</fullName>
    <label>BatchTotalJobItems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>