force-app/main/default/objects/IFLog__c/fields/BatchUser__c.field-meta.xml
<CustomField>
    <fullName>BatchUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BatchUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IFLog_BatchUser</relationshipName>
    <type>Lookup</type>
</CustomField>