force-app/main/default/objects/IFLog__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <formula>IF(ISBLANK(IFMaster__r.Endpoint__c), &apos;N/A&apos;, IFMaster__r.Endpoint__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndPoint</label>
    <type>Text</type>
</CustomField>