force-app/main/default/objects/IFLog__c/fields/ErrorText__c.field-meta.xml
<CustomField>
    <fullName>ErrorText__c</fullName>
    <label>ErrorText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>