force-app/main/default/objects/IFLog__c/fields/IF_RequestSize__c.field-meta.xml
<CustomField>
    <fullName>IF_RequestSize__c</fullName>
    <label>IF_RequestSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>