force-app/main/default/objects/IFLog__c/fields/IF_ResponseSize__c.field-meta.xml
<CustomField>
    <fullName>IF_ResponseSize__c</fullName>
    <label>IF_ResponseSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>