force-app/main/default/objects/IFLog__c/fields/IFMaster__c.field-meta.xml
<CustomField>
    <fullName>IFMaster__c</fullName>
    <label>IFMaster</label>
    <referenceTo>IFMaster__c</referenceTo>
    <relationshipLabel>IFLog</relationshipLabel>
    <relationshipName>IFLog</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>