force-app/main/default/objects/IFLog__c/fields/Interface_Id__c.field-meta.xml
<CustomField>
    <fullName>Interface_Id__c</fullName>
    <formula>IFMaster__r.InterfaceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interface Id</label>
    <type>Text</type>
</CustomField>