force-app/main/default/objects/IFLog__c/fields/LogText__c.field-meta.xml
<CustomField>
    <fullName>LogText__c</fullName>
    <label>LogText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>