force-app/main/default/objects/IFLog__c/fields/RequestHeader__c.field-meta.xml
<CustomField>
    <fullName>RequestHeader__c</fullName>
    <label>RequestHeader</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>