force-app/main/default/objects/IFLog__c/fields/ResponseHeader__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeader__c</fullName>
    <label>ResponseHeader</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>