force-app/main/default/objects/IFLog__c/fields/ResponseTime__c.field-meta.xml
<CustomField>
    <fullName>ResponseTime__c</fullName>
    <label>ResponseTime</label>
    <type>DateTime</type>
</CustomField>