force-app/main/default/objects/IFLog__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <label>ResultCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>