force-app/main/default/objects/IFLog__c/fields/ResultMessage__c.field-meta.xml
<CustomField>
    <fullName>ResultMessage__c</fullName>
    <label>ResultMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>