force-app/main/default/objects/IFLog__c/recordTypes/Batch.recordType-meta.xml
<RecordType>
    <fullName>Batch</fullName>
    <active>true</active>
    <label>Batch</label>
</RecordType>