force-app/main/default/objects/IFLog__c/recordTypes/Interface.recordType-meta.xml
<RecordType>
    <fullName>Interface</fullName>
    <active>true</active>
    <label>Interface</label>
</RecordType>