force-app/main/default/objects/IFLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IFMaster__c</columns>
    <columns>RequestBody__c</columns>
    <columns>RequestHeader__c</columns>
    <columns>RequestTime__c</columns>
    <columns>ResponseBody__c</columns>
    <columns>ResponseHeader__c</columns>
    <columns>ResponseTime__c</columns>
    <columns>ResultCode__c</columns>
    <columns>ResultMessage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>